--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid bg-dark border-top border-danger">
+<footer class="container-fluid bg-dark border-top border-secondary">
     <div class="row w-100 mx-0 text-center">
         <div class="col-12 small">
             <p class="small text-white mb-0">
