--- a/app/views/comingsoon.html
+++ b/app/views/comingsoon.html
@@ -1,6 +1,6 @@
 <section class="comingsoon-s1 container-fluid min-vh-100 d-flex align-items-center py-5">
     <div class="row w-100 mx-0">
-        <div class="col-12 col-sm-8 col-md-6 text-center text-sm-start">
+        <div class="col-12 col-sm-8 col-md-6 text-end ms-auto">
             <h1 class="display-3 text-white text-shadow">
                 Coming soon
             </h1>
