--- a/app/views/error.html
+++ b/app/views/error.html
@@ -1,6 +1,6 @@
 <section class="error-s1 container-fluid min-vh-100 d-flex align-items-center py-5">
     <div class="row w-100 mx-0">
-        <div class="col-10 col-sm-8 col-md-6 text-start text-shadow">
+        <div class="col-10 col-sm-8 col-md-6 text-start">
             <h1 class="display-3 text-white fw-bold">
                 Error 404
             </h1>
